update requirements and change to templates

--- a/LevelUp/main/templates/volume/volume.html
+++ b/LevelUp/main/templates/volume/volume.html
@@ -1,7 +1,7 @@
 {% extends 'basetemplate.html' %}
 {% block content %}
 <br>
-<legend class="border-bottom mb-4">Log In</legend>
+<legend class="border-bottom mb-4">Volumen</legend>
 <div class="content-section">
   {% if status == "Success" %}
     <div class = "alert alert-success" role="alert">
