--- a/LevelUp/main/templates/basetemplate.html
+++ b/LevelUp/main/templates/basetemplate.html
@@ -77,29 +77,33 @@
 
       /* Change the background color of the dropdown button when the dropdown content is shown */
       .dropdown:hover .dropbtn {background-color: #343A40;}
-        {% block style %}
-        {% endblock style %}
+      {% block style %}
+      {% endblock style %}
     </style>
 </head>
 
 <body>
-    <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
-      <a class="navbar-brand" href="{% url 'login' %}">LevelUp</a>
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarColor01" aria-controls="navbarColor01" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
+    <nav class="navbar navbar-expand-lg navbar-dark bg-primary py-2">
+      <div class="container-fluid">
+        <a class="navbar-brand" href="{% url 'login' %}">LevelUp</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarColor01" aria-controls="navbarColor01" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
 
-      <div class="collapse navbar-collapse" id="navbarColor01">
-        <ul class="navbar-nav mr-auto">
-            <div class="dropdown">
-              <button class="dropbtn">Secciones</button>
-              <div class="dropdown-content">
-                <a href="">Operaciones</a>
-                <a href="">Compras</a>
-                <a href="">Ventas</a>
+        <div class="collapse navbar-collapse" id="navbarColor01">
+          <ul class="navbar-nav mr-auto">
+              <div class="dropdown">
+                <button class="dropbtn">Secciones</button>
+                <div class="dropdown-content">
+                  <a href="">Operaciones</a>
+                  <a href="">Compras</a>
+                  <a href="">Ventas</a>
+                </div>
               </div>
-            </div>
-        </ul>
+          </ul>
+          <a class="btn btn-secondary mr-1 py-1 px-4" href="{% url 'login' %}">Login</a>
+          <a class="btn btn-secondary mr-1 py-1 px-4" href="{% url 'sign up' %}">Sign Up</a>
+        </div>
       </div>
     </nav>
 
@@ -118,7 +122,7 @@
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
-    <script src="https://kit.fontawesome.com/6762053e2b.js" crossorigin="anonymous"></script>
+    <script src="https://kit.fontawesome.com/211962e7dd.js" crossorigin="anonymous"></script>
 </body>
 
 </html>
