--- a/LevelUp/LevelUp/templates/authentication/login.html
+++ b/LevelUp/LevelUp/templates/authentication/login.html
@@ -1,4 +1,5 @@
 {% extends 'basetemplate.html' %}
+
 {% block content %}
 <br>
 <div class="container">
@@ -13,7 +14,7 @@
       <div class="content-section">
           <form method="POST" action="">
             {% csrf_token %}
-            <div class="form-group">
+            <div class="form-group mb-3">
               <label class="control-label" for="{{ form.username.id_for_label }}">
                 Username
               </label>
@@ -25,7 +26,7 @@
                 {{ form.username }}
               </div>
             </div>
-            <div class="form-group">
+            <div class="form-group mb-3">
               <label class="control-label" for="{{ form.password.id_for_label }}">
                 Password
               </label>
@@ -36,7 +37,7 @@
                 {{ form.password }}
               </div>
             </div>
-            <input style="background-color:#7C2DAD" class="btn btn-primary" type="submit" value="Sign Up">
+            <input class="btn btn-outline-themed-primary" type="submit" value="Login">
           </form>
       </div>
     </div>
