--- a/LevelUp/LevelUp/templates/authentication/signup.html
+++ b/LevelUp/LevelUp/templates/authentication/signup.html
@@ -8,7 +8,7 @@
       <div class="content-section">
         <form method="POST" action="">
           {% csrf_token %}
-          <div class="form-group">
+          <div class="form-group mb-3">
             <label class="control-label" for="{{ form.username.id_for_label }}">
               Username
             </label>
@@ -20,7 +20,7 @@
               {{ form.username }}
             </div>
           </div>
-          <div class="form-group">
+          <div class="form-group mb-3">
             <label class="control-label" for="{{ form.email.id_for_label }}">
               Email
             </label>
@@ -32,7 +32,7 @@
               {{ form.email }}
             </div>
           </div>
-          <div class="form-group">
+          <div class="form-group mb-3">
             <label class="control-label" for="{{ form.password.id_for_label }}">
               Password
             </label>
@@ -44,7 +44,7 @@
               {{ form.password }}
             </div>
           </div>
-          <input style="background-color:#7C2DAD" class="btn btn-primary" type="submit" value="Sign Up">
+          <input class="btn btn-outline-themed-primary" type="submit" value="Sign Up">
         </form>
       </div>
     </div>
