--- a/LevelUp/LevelUp/templates/basetemplate_loggedin.html
+++ b/LevelUp/LevelUp/templates/basetemplate_loggedin.html
@@ -18,7 +18,7 @@
     <meta name="theme-color" content="#660601">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;600&family=Roboto:wght@100;500&display=swap" rel="stylesheet">
-    <link href="{% static 'bootstrap.css' %}?678778" type="text/css" rel="stylesheet">
+    <link href="{% static 'bootstrap.css' %}?76667676" type="text/css" rel="stylesheet">
     <link href="{% static 'theme.css' %}?6733778" type="text/css" rel="stylesheet">
 
     <script src="https://kit.fontawesome.com/211962e7dd.js" crossorigin="anonymous" async></script>
@@ -45,10 +45,26 @@
 
         <div class="collapse navbar-collapse" id="navbarColor01">
           <ul class="navbar-nav me-auto">
+              <div class="dropdown">
+                <button class="dropbtn font-monospace">Secciones</button>
+                <div class="dropdown-content">
+                  <a href="">Operaciones</a>
+                  <a href="">Compras</a>
+                  <a href="">Ventas</a>
+                </div>
+              </div>
           </ul>
+
           <div class="d-flex">
-            <a class="btn btn-themed-primary py-2 me-sm-2" href="{% url 'authentication:login' %}">Login</a>
-            <a class="btn btn-themed-primary py-2" href="{% url 'authentication:sign up' %}">Sign Up</a>
+            <div class="btn-group" role="group" aria-label="User Profile button dropdown">
+              <div class="btn-group" role="group">
+                <button id="btnGroupDrop1" type="button" class="btn btn-themed-primary dropdown-toggle pt-2 pb-2" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false"><i class="fas fa-user fa-lg"></i> </button>
+                <div class="dropdown-menu dropdown-menu-dark dropdown-menu-end" aria-labelledby="btnGroupDrop1">
+                  <a class="dropdown-item" href="#">Profile</a>
+                  <a class="dropdown-item" href="#">Logout</a>
+                </div>
+              </div>
+            </div>
           </div>
         </div>
       </div>
