--- a/LevelUp/LevelUp/templates/basetemplate_loggedin.html
+++ b/LevelUp/LevelUp/templates/basetemplate_loggedin.html
@@ -60,8 +60,8 @@
               <div class="btn-group" role="group">
                 <button id="btnGroupDrop1" type="button" class="btn btn-themed-primary dropdown-toggle pt-2 pb-2" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false"><i class="fas fa-user fa-lg"></i> </button>
                 <div class="dropdown-menu dropdown-menu-dark dropdown-menu-end" aria-labelledby="btnGroupDrop1">
-                  <a class="dropdown-item" href="#">Profile</a>
-                  <a class="dropdown-item" href="#">Logout</a>
+                  <a class="dropdown-item" href="{% url 'userprofiles:profile' %}">Profile</a>
+                  <a class="dropdown-item" href="{% url 'authentication:logout' %}">Logout</a>
                 </div>
               </div>
             </div>
