--- a/LevelUp/LevelUp/templates/basetemplate.html
+++ b/LevelUp/LevelUp/templates/basetemplate.html
@@ -6,23 +6,19 @@
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta content="yes" name="apple-touch-fullscreen" />
     <meta name="apple-mobile-web-app-status-bar-style" content="black">
-    <meta name="format-detection" content="telephone=no">
-    <meta name="viewport" content="width = 320, initial-scale = 2.3, user-scalable = no">
-    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-    <meta name="robots" content="noindex" />
+  
     <meta name="description" content="LevelUp Eda - Proyecto">
     <meta name="keywords" content="LevelUp">
     <meta name="author" content="EDA2021">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
     <meta charset="utf-8">
-    <meta name="theme-color" content="#660601">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;600&family=Roboto:wght@100;500&display=swap" rel="stylesheet">
     <link href="{% static 'bootstrap.css' %}?678778" type="text/css" rel="stylesheet">
     <link href="{% static 'theme.css' %}?6733778" type="text/css" rel="stylesheet">
 
     <script src="https://kit.fontawesome.com/211962e7dd.js" crossorigin="anonymous" async></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous" async></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 
     {% if title %}
       <title>LevelUp - {{title}}</title>
