--- a/LevelUp/LevelUp/templates/userprofiles/profile.html
+++ b/LevelUp/LevelUp/templates/userprofiles/profile.html
@@ -1,11 +1,6 @@
 {% extends 'basetemplate_loggedin.html' %}
 {% block content %}
-<br>
-<div class="container">
-  <div class="row justify-content-center">
-    <div class="col-xl-6">
-      <legend class="border-bottom mb-4">Log In</legend>
-    </div>
-  </div>
+<div class="alert alert-info text-center rounded mt-2 mb-2 ml-5 mr-5">
+  You have visited a total of 0 Nodes!
 </div>
 {% endblock content %}
