--- a/LevelUp/LevelUp/templates/increaseLevel/increaseLevel.html
+++ b/LevelUp/LevelUp/templates/increaseLevel/increaseLevel.html
@@ -7,6 +7,7 @@
   <div class="text-left fs-1 py-5 px-5">
     Increase Level
   </div>
+  {% if promoted %}
   <div class="content px-5">
     <div class="row">
       <div class="col-9">
