gráficas con datos aleatorios

--- a/LevelUp/LevelUp/templates/volume/volume.html
+++ b/LevelUp/LevelUp/templates/volume/volume.html
@@ -1,11 +1,8 @@
 {% extends 'basetemplate.html' %}
-{% load static %}
+
 
 {% block script %}
-<script src="{% static 'highchart/highcharts.js' %}"></script>
-<script src="{% static 'highchart/modules/exporting.js'%}"></script>
-<script src="{% static 'highchart/modules/export-data.js'%}"></script>
-<script src="{% static 'highchart/modules/accessibility.js'%}"></script>
+<script src="https://code.highcharts.com/highcharts.src.js"></script>
 {% endblock script %}
 
 {% block content %}
@@ -24,17 +21,17 @@ Highcharts.chart('container', {
         type: 'line'
     },
     title: {
-        text: 'Monthly Average Temperature'
+        text: 'Monthly Average Volume'
     },
     subtitle: {
-        text: 'Source: WorldClimate.com'
+        text: 'xd'
     },
     xAxis: {
         categories: ['Jan', 'Feb', 'Mar', 'Apr', 'May', 'Jun', 'Jul', 'Aug', 'Sep', 'Oct', 'Nov', 'Dec']
     },
     yAxis: {
         title: {
-            text: 'Temperature (°C)'
+            text: 'Volume (m)'
         }
     },
     plotOptions: {
@@ -46,11 +43,11 @@ Highcharts.chart('container', {
         }
     },
     series: [{
-        name: 'Tokyo',
-        data: [7.0, 6.9, 9.5, 14.5, 18.4, 21.5, 25.2, 26.5, 23.3, 18.3, 13.9, 9.6]
+        name: 'You',
+        data: {{volumes}}
     }, {
-        name: 'London',
-        data: [3.9, 4.2, 5.7, 8.5, 11.9, 15.2, 17.0, 16.6, 14.2, 10.3, 6.6, 4.8]
+        name: 'Your goal',
+        data: [100,150, 500, 85, 99, 152, 300, 106, 132, 103, 66, 48]
     }]
 });
     
