--- a/LevelUp/LevelUp/templates/userprofiles/profile.html
+++ b/LevelUp/LevelUp/templates/userprofiles/profile.html
@@ -1,4 +1,16 @@
 {% extends 'basetemplate_loggedin.html' %}
+
+{% block script %}
+<script type="text/javascript">
+function AlertDelete(cnt, w_id) {
+  // window.alert(w_id);
+  var answer = confirm ("Are you sure you would like to delete this workout?");
+  if (answer)
+  window.location=`{% url 'userprofiles:profile' %}?rmw=${cnt}&&id=${w_id}`;
+}
+</script>
+{% endblock script %}
+
 {% block content %}
 <div class="alert alert-info text-center rounded mt-2 mb-2 ml-5 mr-5">
   You have visited a total of 0 Nodes!
@@ -9,7 +21,7 @@
     <div class="col-4">
       <hr/>
       <div class="container-fluid d-flex justify-content-end">
-        <a href="#" class="text-info"><i class="fas fa-pen"></i></a>
+        <a href="{% url 'userprofiles:edit-profile' %}" class="text-info"><i class="fas fa-pen"></i></a>
       </div>
       <div class="container-fluid d-flex justify-content-center align-items-center mb-3">
         <div class="d-flex align-items-center justify-content-center" style="width:60%; aspect-ratio: 1/1;">
@@ -19,13 +31,13 @@
       <div class="container-fluid d-flex justify-content-center mb-5">
         <div class="col text-center">
           <h3>{{ user.username }}</h3>
-          {% if user.first_name %}
-            <h5>{{ user.first_name }}</h5>
+          {% if first_name %}
+            <h5>{{ first_name }}</h5>
           {% else %}
             <h5>First Name</h5>
           {% endif %}
-          {% if user.last_name %}
-            <h5>{{ user.last_name }}</h5>
+          {% if last_name %}
+            <h5>{{ last_name }}</h5>
           {% else %}
             <h5>Last Name</h5>
           {% endif %}
@@ -54,8 +66,9 @@
             <div class="col-4">
               <div class="card container-fluid shadow p-2" style="height: 400px;">
                 <div class="row mx-1">
-                  <div class="d-flex justify-content-end">
-                    <a href="#" style="text-decoration: none;"><i class="fas fa-eye text-info"></i></a>
+                  <div class="d-flex justify-content-between">
+                    <a href="{% url 'userprofiles:view-workout' %}?id={{ workout.id }}" style="text-decoration: none;"><i class="fas fa-eye text-info"></i></a>
+                    <a href="javascript:AlertDelete({{ forloop.counter0 }},'{{ workout.id }}');" style="text-decoration: none;"><i class="fas fa-times-circle text-danger"></i></a>
                   </div>
                 </div>
                 <div class="row">
