--- a/LevelUp/LevelUp/templates/volume/volume.html
+++ b/LevelUp/LevelUp/templates/volume/volume.html
@@ -33,17 +33,17 @@ Highcharts.chart('container', {
         type: 'line'
     },
     title: {
-        text: 'Monthly Average Volume'
+        text: 'Your last 30 days'
     },
     subtitle: {
-        text: 'xd'
+        text: ''
     },
     xAxis: {
-        categories: ['Jan', 'Feb', 'Mar', 'Apr', 'May', 'Jun', 'Jul', 'Aug', 'Sep', 'Oct', 'Nov', 'Dec']
+        categories:Array(30)
     },
     yAxis: {
         title: {
-            text: 'Volume (Kg)'
+            text: 'Volume '
         }
     },
     plotOptions: {
@@ -58,24 +58,12 @@ Highcharts.chart('container', {
         name: 'You',
         data: {{volumes}}
     }, {
-        name: 'Your goal',
-        data: [100,150, 500, 85, 99, 152, 300, 106, 132, 103, 66, 48]
+        name: 'Your level goal',
+        data: [71800,41520, 85100, 98885, 7959, 21752, 61300, 71106, 25132, 91003, 2866, 7748]
     }]
 });
 
-var l =[]
-
-
-for (var e in {exercises} )
-    l.push(
-        {
-            name: e[0],
-            y: e[1],
-        }
-    )
-
-
-console.log(l)
+console.log("{{exercises.0.1}}")
 
 Highcharts.chart('Piecontainer', {
     chart: {
@@ -85,7 +73,7 @@ Highcharts.chart('Piecontainer', {
         type: 'pie'
     },
     title: {
-        text: 'Your monthly exercises'
+        text: 'Your favorite exercises'
     },
     tooltip: {
         pointFormat: '{series.name}: <b>{point.percentage:.1f}%</b>'
@@ -109,27 +97,36 @@ Highcharts.chart('Piecontainer', {
     series: [{
         name: 'Porcentaje',
         colorByPoint: true,
-        data: [{
-            name: "{{exercises.0.0}}",
-            y: {{exercises.0.1}},
-            sliced: true,
-            selected: true
-        }, {
-            name: "{{exercises.1.0}}",
-            y: {{exercises.1.1}}
-        }, {
-            name: "{{exercises.2.0}}",
-            y: {{exercises.2.1}}
-        }, {
-            name: "{{exercises.0.0}}",
-            y: {{exercises.2.1}}
-        }, {
-            name: "{{exercises.0.0}}",
-            y: 4.18
-        }, {
-            name: "{{exercises.0.0}}",
-            y: 7.05
-        }]
+        data: [
+            {
+            name :"{{exercises.0.0}}",
+            y : parseFloat("{{exercises.0.1}}")
+            },
+            {
+            name :"{{exercises.1.0}}",
+            y : parseFloat("{{exercises.1.1}}")
+            },
+            {
+            name :"{{exercises.2.0}}",
+            y : parseFloat("{{exercises.2.1}}")
+            },
+            {
+            name :"{{exercises.3.0}}",
+            y : parseFloat("{{exercises.3.1}}")
+            },
+            {
+            name :"{{exercises.4.0}}",
+            y : parseFloat("{{exercises.4.1}}")
+            },
+            {
+            name :"{{exercises.5.0}}",
+            y : parseFloat("{{exercises.5.1}}")
+            },
+            {
+            name :"{{exercises.6.0}}",
+            y : parseFloat("{{exercises.6.1}}")
+            },
+        ]
     }]
 });
     
