Hecho el disjoint set y las utilidades de navegacion de grafos

--- a/LevelUp/LevelUp/templates/userprofiles/profile.html
+++ b/LevelUp/LevelUp/templates/userprofiles/profile.html
@@ -13,7 +13,7 @@ function AlertDelete(cnt, w_id) {
 
 {% block content %}
 <div class="alert alert-info text-center rounded mt-2 mb-2 ml-5 mr-5">
-  You have visited a total of 0 Nodes!
+  You have visited a total of {{ nodes }} Nodes and you have a total of {{ connections }} Connections!
 </div>
 
 <div class="container d-flex px-2">
