--- a/LevelUp/LevelUp/templates/basetemplate_loggedin.html
+++ b/LevelUp/LevelUp/templates/basetemplate_loggedin.html
@@ -47,14 +47,22 @@
 
         <div class="collapse navbar-collapse" id="navbarColor01">
           <ul class="navbar-nav me-auto">
+            <li class="nav-item">
+              <a class="nav-link" href="{% url 'increaseLevel:increase_level' %}">Level Up</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="{% url 'volumen:VolumeHistory' %}">Volume History</a>
+            </li>
+            <li class="nav-item">
               <div class="dropdown">
-                <button class="dropbtn font-monospace">Secciones</button>
+                <button class="dropbtn font-monospace nav-link">Trials</button>
                 <div class="dropdown-content">
-                  <a href="">Operaciones</a>
-                  <a href="">Compras</a>
-                  <a href="">Ventas</a>
+                  <a href="{% url 'trials:volume' %}">Volume</a>
+                  <a href="{% url 'trials:queue_365' %}">Queue365</a>
+                  <a href="{% url 'trials:pyramid' %}">Pyramid</a>
                 </div>
               </div>
+            </li>
           </ul>
 
           <div class="d-flex">
