Nuevo mensaje en home

--- a/LevelUp/LevelUp/templates/home/home.html
+++ b/LevelUp/LevelUp/templates/home/home.html
@@ -28,16 +28,16 @@ body {
 <div class="container" style="height: calc(100vh - 70px);">
   <div class="d-flex flex-column h-100">
     <div class="d-flex align-items-left w-100">
-      <legend class="border-bottom border-primary mt-4 mb-4"><h1 class="display-3 text-primary">How it Works</h1></legend>
+      <legend class="border-bottom border-primary mt-4 mb-4"><h1 class="display-3 text-primary">¡Bienvenido a LevelUp!</h1></legend>
     </div>
     <div class="d-flex flex-grow-1 align-items-center">
       <div class="col">
         <img src="{% static 'images/home/example_graph.png' %}" alt="Graph Image" style="width: 512px; height: 384px;">
       </div>
       <div class="col">
-        <h1 class="text-center"> LOREM IPSUM  </h1>
+        <h1 class="text-center">¿Qué es levelUp?</h1>
         <p class="lead">
-          Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.
+          LevelUp es una aplicación web destinada a incentivar la actividad física a través de relaciones interpersonales graduadas por niveles de actividad física y te permite registrar tus sesiones de ejercicios. A través del conocimiento de estructuras de datos tales como pilas, colas, listas enlazadas (implementadas tanto con arreglos como con referencias), árboles y tablas hash se busca desarrollar de manera óptima las funcionalidades de la aplicación.
         </p>
       </div>
     </div>
